objects from appended scenes are added to current scene as well (if they are directly under the Scene Collection in the source file) #85947

Closed
opened 2021-02-24 12:16:35 +01:00 by Philipp Oeser · 8 comments
Member

System Information
Operating system: Linux-5.10.12-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits
Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01

Blender Version
Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-24 10:16, hash: daf7f42364
Broken: 2.81
Worked: 2.80

Short description of error
objects from appended scenes are added to current scene as well (if they are directly under the Scene Collection in the source file)

Exact steps for others to reproduce the error
append_scene_adds_objects_to_current_scene.blend

In a fresh default file:

  • append scene torus_under_scene_collection from above .blend
  • the torus object also gets added to your current scene (this looks like unexpected behavior to me)

Again from a fresh default file:

  • append scene torus_in_own_collection from above .blend
  • the torus object also does not get added to your current scene
**System Information** Operating system: Linux-5.10.12-200.fc33.x86_64-x86_64-with-glibc2.32 64 Bits Graphics card: GeForce GTX 970M/PCIe/SSE2 NVIDIA Corporation 4.5.0 NVIDIA 455.45.01 **Blender Version** Broken: version: 2.93.0 Alpha, branch: master, commit date: 2021-02-24 10:16, hash: `daf7f42364` Broken: 2.81 Worked: 2.80 **Short description of error** objects from appended scenes are added to current scene as well (if they are directly under the Scene Collection in the source file) **Exact steps for others to reproduce the error** [append_scene_adds_objects_to_current_scene.blend](https://archive.blender.org/developer/F9834480/append_scene_adds_objects_to_current_scene.blend) In a fresh default file: - append scene `torus_under_scene_collection` from above .blend - the torus object also gets added to your current scene (this looks like unexpected behavior to me) Again from a fresh default file: - append scene `torus_in_own_collection` from above .blend - the torus object also does not get added to your current scene
Author
Member

Added subscriber: @lichtwerk

Added subscriber: @lichtwerk
Author
Member

Changed status from 'Needs Triage' to: 'Confirmed'

Changed status from 'Needs Triage' to: 'Confirmed'
Author
Member

Added subscribers: @mont29, @Olliver

Added subscribers: @mont29, @Olliver
Author
Member

Havent checked code, but this is not expected behavior, right @mont29?

This came up in #85931 (Eevee render proprties wont get appended along with the scene.) btw.

Havent checked code, but this is not expected behavior, right @mont29? This came up in #85931 (Eevee render proprties wont get appended along with the scene.) btw.

Think we are once again suffering from the embedded ID plague... My guess would be, when we check if a linked Object is used somewhere, we forget to check for usages from master collections of scenes...

Think we are once again suffering from the embedded ID plague... My guess would be, when we check if a linked Object is used somewhere, we forget to check for usages from master collections of scenes...

See add_loose_objects_to_scene in readfile.c

See `add_loose_objects_to_scene` in `readfile.c`

This issue was referenced by 8f6fd07b54

This issue was referenced by 8f6fd07b54653befe9568cca2752603c74ab5667

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Bastien Montagne self-assigned this 2021-02-24 14:16:23 +01:00
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#85947
No description provided.