Fix T85947: Missing check of master collection for objects being instanced.

`object_in_any_collection` used during linking/appending to check
whether an object is already instanced by at least one collection, was
not taking into account embedded master collections from scenes.